Error-page button adjustments

--- a/src/main/resources/templates/error-page.html
+++ b/src/main/resources/templates/error-page.html
@@ -32,7 +32,7 @@
         <div class="form-horizontal jumbotron text-center border border-light p-5 justify-content-center d-flex flex-column">
             <h2 class="h2 my-4">Wystąpił nieoczekiwany błąd</h2>
             <a>
-                <button class="btn btn-primary" href="/">Wróć do strony głównej</button>
+                <button class="btn blue lighten-1 text-white" href="/">Wróć do strony głównej</button>
             </a>
         </div>
     </div>
