--- a/src/main/resources/templates/error-page.html
+++ b/src/main/resources/templates/error-page.html
@@ -28,7 +28,7 @@
 <div th:replace="common/header :: header"></div>
 
 <div class="container">
-    <div class="row justify-content-center align-middle mt-5">
+    <div class="row justify-content-center align-middle my-5">
         <div class="form-horizontal jumbotron text-center border border-light p-5 justify-content-center d-flex flex-column">
             <h2 class="h2 my-4">Wystąpił nieoczekiwany błąd</h2>
             <a>
