Smaller headers paddings

--- a/src/main/resources/templates/friend/blocked.html
+++ b/src/main/resources/templates/friend/blocked.html
@@ -60,7 +60,7 @@
     <div class="row mx-sm-2 my-lg-0">
         <div class="col-12">
             <div class="card my-4">
-                <div class="card-header blue lighten-1 white-text d-flex">
+                <div class="card-header blue lighten-1 white-text d-flex p-2">
                     <div class="flex-grow-1 mr-auto my-auto">
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle h4 px-2 my-0 p-0 text-white" data-toggle="dropdown"
@@ -72,10 +72,10 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn red lighten-1 btn-sm" type="button" data-toggle="modal"
+                        <button class="btn red lighten-1 btn-sm m-0" type="button" data-toggle="modal"
                                 data-target="#block">
                             Zablokuj email
-                            <i class="fas fa-ban"></i>
+                            <i class="fas fa-ban ml-1"></i>
                         </button>
                     </div>
                 </div>
