--- a/src/main/resources/templates/friend/friends.html
+++ b/src/main/resources/templates/friend/friends.html
@@ -57,7 +57,7 @@
     <div class="row mx-sm-2 my-lg-0">
         <div class="col-12">
             <div class="card my-4">
-                <div class="card-header blue lighten-1 white-text d-flex">
+                <div class="card-header blue lighten-1 white-text d-flex p-2">
                     <!--<strong class="h4 flex-grow-1 px-2 m-auto">Znajomi</strong>-->
                     <div class="flex-grow-1 mr-auto my-auto">
                         <div class="nav-item dropdown">
@@ -70,9 +70,9 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn green btn-sm" type="button" data-toggle="modal" data-target="#invite">
+                        <button class="btn green btn-sm m-0" type="button" data-toggle="modal" data-target="#invite">
                             Zaproś znajomego
-                            <i class="fas fa-plus "></i>
+                            <i class="fas fa-plus ml-1"></i>
                         </button>
                     </div>
                 </div>
