--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -104,11 +104,11 @@
     <div class="row mx-sm-2 my-lg-0">
         <div class="col-12">
             <div class="card my-4">
-                <div class="card-header blue lighten-1 white-text d-flex">
+                <div class="card-header blue lighten-1 white-text d-flex p-2">
                     <strong class="h4 flex-grow-1 px-2 m-auto">Moje grupy</strong>
-                    <button class="btn green btn-sm" type="button" data-toggle="modal" data-target="#centralModalSm">
+                    <button class="btn green btn-sm m-0" type="button" data-toggle="modal" data-target="#centralModalSm">
                         Dodaj Grupę
-                        <i class="fas fa-plus "></i>
+                        <i class="fas fa-plus ml-1"></i>
                     </button>
                 </div>
 
