--- a/src/main/resources/templates/notification/invitations.html
+++ b/src/main/resources/templates/notification/invitations.html
@@ -30,7 +30,7 @@
     <div class="row mx-sm-2 my-lg-0">
         <div class="col-12">
             <div class="card my-4">
-                <div class="card-header blue lighten-1 white-text d-flex">
+                <div class="card-header blue lighten-1 white-text d-flex p-2">
                     <strong class="h4 flex-grow-1 px-2 m-auto">Zaproszenia do grup</strong>
                 </div>
 
