Budget css changed

--- a/src/main/resources/templates/expense/expenses.html
+++ b/src/main/resources/templates/expense/expenses.html
@@ -65,7 +65,7 @@
                 <div class="card-header blue lighten-1 white-text d-flex p-2">
                     <strong class="h4 flex-grow-1 px-2 m-0">Wydatki</strong>
                     <h4 class="m-0">
-                        <span class="badge " th:classappend="${totalBalance >= 0} ? 'badge-success' : 'badge-danger'"
+                        <span class="px-2 py-1 " th:classappend="${totalBalance >= 0} ? 'badge-success' : 'badge-danger'"
                               th:text="${'Bilans ogólny:  ' + totalBalance + ' zł'}">
                         </span>
                     </h4>
