--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -31,8 +31,7 @@
     <div class="row justify-content-center align-middle my-5">
         <div class="form-horizontal jumbotron text-center border border-light p-5 justify-content-center d-flex flex-column">
             <h2 class="h2 my-4">Wystąpił nieoczekiwany błąd</h2>
-            <a>
-                <button class="btn blue lighten-1 text-white" href="/">Wróć do strony głównej</button>
+            <a class="btn blue lighten-1 text-white" href="/">Wróć do strony głównej
             </a>
         </div>
     </div>
