--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -64,13 +64,13 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item ml-auto" sec:authorize="isAnonymous()">
+                <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" th:href="@{/login}">Zaloguj</a>
                 </li>
-                <li class="nav-item ml-auto" sec:authorize="isAnonymous()">
+                <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" th:href="@{/registration}">Zarejestruj</a>
                 </li>
-                <li class="nav-item ml-auto" sec:authorize="isAuthenticated()">
+                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/logout}">Wyloguj</a>
                 </li>
                 <li class="nav-item avatar" sec:authorize="isAuthenticated()">
