--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -32,7 +32,7 @@
         <a class="navbar-brand mr-5 ml-1 p-0" href="#">
             <img src="/img/logo.png" height="40">
         </a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
+        <button class="navbar-toggler ml-auto order-1" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent-555"
                 aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
