--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -72,5 +72,12 @@
 
 <div th:replace="common/footer :: footer"></div>
 
+<script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" th:src="@{/js/mdb.min.js}"></script>
 </body>
 </html>
