--- a/src/main/resources/templates/notification/invitations.html
+++ b/src/main/resources/templates/notification/invitations.html
@@ -63,14 +63,18 @@
                                               role="form">
                                             <div class="md-form my-0">
                                                 <input type="hidden" th:attr="name=id" class="form-control" th:value="${invite.id}"/>
-                                                <input type="hidden" th:attr="name=status" class="form-control" th:value="${'ACCEPTED'}"/>
+                                                <input type="hidden" th:attr="name=invitationStatus" class="form-control" th:value="${'ACCEPTED'}"/>
                                                 <button type="submit" class="text-white btn green btn-sm">Przyjmij <i class="fas fa-check"></i></i></button>
                                             </div>
                                         </form>
                                     </td>
                                     <td class="px-0 py-1">
-                                        <form autocomplete="off" action="#" >
+                                        <form autocomplete="off" action="#" th:action="@{/group/invite/status}"
+                                              th:object="${statusChangeRequest}" method="post"
+                                              role="form">
                                             <div class="md-form my-0">
+                                                <input type="hidden" th:attr="name=id" class="form-control" th:value="${invite.id}"/>
+                                                <input type="hidden" th:attr="name=invitationStatus" class="form-control" th:value="${'PENDING'}"/>
                                                 <button type="submit" class="text-white btn red lighten-1 btn-sm">Odrzuć <i class="fas fa-times"></i></button>
                                             </div>
                                         </form>
